feat: new window key bind to alcaritty

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -18,3 +18,8 @@ offset.y = 4
 
 [terminal]
 shell = "/usr/local/bin/fish"
+
+[keyboard]
+bindings = [
+    { key = "P", mods = "Command", action = "CreateNewWindow" }
+]
